src/styles/css/responsive.css
/* ... */
/* Medium devices (tablets, 768px and up) */
@media (max-width: 767.98px) {
    #sticky-header {
        max-width: 100%;
        padding: 18px 22px !important;
    }

    #sticky-header.sticky-menu {
        /* margin: 0 !important; */
    }

    .custom-container,
    .container {
        max-width: 100%;
    }

    .transparent-header {
        top: 0;
    }

    .header-form {
        width: 200px;
        margin-left: 0;
        padding-left: 0;
        margin-right: 20px;
    }

    .header-form::before {
        display: none;
    }

    .header-form {
        display: block;
    }

    .banner-content .title {
        font-size: var(--heading-3);
        line-height: 130%;
        margin-top: -44px;
    }

    .banner-area {
        padding: 190px 0 95px;
        margin-top: unset;
    }

    .banner-area img.banner-stickers {
        margin-top: -64px;
        margin-left: 64px;
    }

    .banner-area p {
        width: 90% !important;
        margin-bottom: 24px;
    }

    .features-avatar {
        display: block;
    }

    .features-avatar-thumb {
        margin-bottom: 10px;
    }

    .section-button.text-end {
        text-align: left !important;
        margin-top: 15px;
    }

    .latest-news-content {
        left: 10px;
        right: 10px;
        bottom: 10px;
        padding: 25px 20px;
    }

    .latest-news-content .title {
        font-size: 16px;
    }

    .testimonial-shape-wrap::before,
    .testimonial-shape-wrap::after {
        display: none;
    }

    .copyright-link-list {
        justify-content: center;
        margin-top: 7px;
    }

    .sidebar-icon ul li a {
        width: 45px;
        height: 45px;
        font-size: 20px;
    }

    .sidebar-icon ul li {
        margin: 0 20px 0 0;
    }

    .sidebar-icon ul li:nth-child(2) {
        margin-bottom: 0;
        padding: 0 20px 0 0;
    }

    .scroll-top {
        display: block;
    }



    .banner-content p {
        width: 100%;
    }

    .copyright-text {
        text-align: center;
    }

    .breadcrumb-content .title {
        font-size: 34px;
    }

    .breadcrumb-bg {
        padding: 190px 0 90px;
    }

    .standard-blog-content {
        padding: 30px 25px;
    }

    .standard-blog-content>.title {
        font-size: 20px;
    }

    .avatar-post {
        padding: 35px 25px;
        display: block;
        text-align: center;
    }

    .blog-details-content blockquote {
        display: none;
    }

    .blog-details-content .small-title {
        font-size: 20px;
        margin-bottom: 15px;
        margin-top: 25px;
    }

    .blog-details-bottom {
        display: block;
    }

    .blog-details-tags {
        width: 100%;
        flex: 0 0 100%;
    }

    .blog-details-social ul {
        justify-content: flex-start;
        margin-top: 10px;
    }

    .post-avatar-img {
        margin: 0 auto 15px;
    }

    .post-avatar-social {
        justify-content: center;
    }

    .blog-next-prev ul {
        flex-wrap: wrap;
    }

    .blog-next-prev ul .blog-next {
        margin-left: auto;
    }

    .blog-next-prev ul .blog-prev {
        margin-right: 20px;
    }

    .comment-reply-box {
        padding: 35px 25px 35px;
    }

    .welcome-activity {
        padding: 25px 25px;
        display: block;
        text-align: center;
    }

    .welcome-activity-img {
        left: 0;
        top: 0;
        max-width: 165px;
        position: unset;
        margin: 0 auto 15px;
    }

    .welcome-activity-content {
        width: 100%;
    }

    .activity-table-wrap {
        padding: 25px 25px 30px;
    }

    .activity-table-nav {
        display: block;
        align-items: center;
        text-align: center;
        margin-bottom: 25px;
    }

    .activity-table-nav .nav-tabs {
        max-width: 238px;
        margin: 20px auto 0;
    }

    .activity-table-nav .nav-item .nav-link {
        padding: 9px 23px;
    }

    .login-welcome-wrap {
        padding: 35px 25px;
        display: block;
        text-align: center;
    }

    .login-welcome-content {
        width: 100%;
        flex: 0 0 100%;
    }

    .welcome-rating {
        margin: 15px auto 0;
    }

    .another-way-signup {
        margin-top: 40px;
    }

    .create-item-form .form-grp input[type="file"] {
        padding: 28px 20px;
    }

    .create-item-form .form-grp input,
    .create-item-form .form-grp textarea {
        padding: 9px 20px;
    }

    .highest-bid-wrap .highest-bid-avatar {
        margin-bottom: 20px;
    }

    .bid-history-wrap .nav .nav-item {
        margin-right: 25px;
    }

    .category-list li {
        margin: 7px 15px;
    }

    section#copa_pru .title {
        font-size: var(--heading-3) !important;
    }

    section#copa_pru div.description {
        padding: 0 15px;
    }

    section#gol {
        padding: 240px 0;
    }

    section#gol button.pick-sticker {
        margin: auto !important;
        display: block;
        position: absolute;
        left: 50%;
        top: 94px;
        translate: -50%;
        padding: 15px 30px;
    }
}

@media (max-width: 574px) {

    .scroll-top.open {
        bottom: 84px;
    }

    section#copa_pru div.container-img {
        border-radius: unset;
        position: relative;
    }

    section#copa_pru img.stickers {
        position: absolute !important;
        /* bottom: 0; */
        top: -124px;
        right: -84px;
        max-width: 412px !important;
    }

    section#copa_pru h2.title {
        margin-right: 270px;
        margin-bottom: -32px !important;
    }

    section#copa_pru h6 {
        position: absolute;
        margin-top: 12px;
    }
}
/* ... */

